Update dependencies, remove unused SVG, add new logo component, and modify homepage content
- Updated Astro dependency from ^5.5.5 to ^5.7.2 in package.json.
- Deleted unused astro.svg file from src/assets.
- Added new LogoHorizontalSVG.astro component for the Confederation College logo.
- Updated index.astro to import Layout using alias and changed homepage title and description.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout>
-  <h1 class="text-h1">homepage</h1>
-  <p>Confederation College Theme</p>
+  <h1 class="text-h1">Confederation College</h1>
+  <p>Basic AstroJS Template</p>
 </Layout>
