Add TypographyTest component and update index page layout
- Introduced TypographyTest component for demonstrating typographic hierarchy.
- Updated index page to utilize TypographyTest instead of static content.
- Commented out the Tailwind config import in global.css for clarity.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import TypographyTest from "@components/TypographyTest.astro";
 ---
 
 <Layout>
-  <h1 class="text-h1">Confederation College</h1>
-  <p>Basic AstroJS Template</p>
+  <TypographyTest />
 </Layout>
