--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 // Supports weights 100-900
 import "@fontsource-variable/outfit";
 import "@styles/global.css";
+
+import Footer from "@components/Footer.astro";
 ---
 
 <!doctype html>
@@ -16,5 +18,6 @@ import "@styles/global.css";
   </head>
   <body>
     <slot />
+    <Footer />
   </body>
 </html>
