--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,9 @@ import TypographyTest from "@components/TypographyTest.astro";
 ---
 
 <Layout>
+  <section class="flex gap-4 bg-white">
+    <div class="bg-primary-dark size-32"></div>
+    <div class="bg-primary-light size-32"></div>
+  </section>
   <TypographyTest />
 </Layout>
