--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,9 +19,19 @@
   --color-light: oklch(98.6% 0.0114 84.58);              /* Based on Yellow */
   --color-accent-yellow: oklch(78.46% 0.165273 75.3442); 
   --color-accent-red: oklch(60.95% 0.2056 29.03); 
-  --color-accent-brown: oklch(38.06% 0.0819 55.12); 
+  --color-accent-brown: oklch(38.06% 0.0819 55.12);
   --color-secondary-1: oklch(40.81% 0.0852 154.17);
   --color-secondary-2: oklch(37.82% 0.1445 30.8);
+  
+  /* 
+  --color-primary: oklch(40.16% 0.087584 236.9217);
+  --color-accent-green: oklch(40.81% 0.0852 154.17); Green - reserved variable
+  --color-accent-burgundy: oklch(37.82% 0.1445 30.8); Burgundy - reserved variable
+  --color-primary-dark: color-mix(in oklch, black 50%, var(--color-primary));
+  --color-primary-light: color-mix(in oklch, var(--color-accent-yellow) 5%, white); 
+  */
+
+
 
   /* Typography */
   /* Fluid type scale (min, viewport, max) */
